[gd_scene load_steps=18 format=2]

[ext_resource path="res://Public/backgroundTutorial1.jpeg" type="Texture" id=1]
[ext_resource path="res://Cenas/Utilitarios/PopupPause.tscn" type="PackedScene" id=2]
[ext_resource path="res://Personagens/Jose/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Personagens/Dellson/Dellson.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/Utilitarios/popupDialogo.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/Fases/Tutorial/Mapa1/Calabouco.gd" type="Script" id=6]
[ext_resource path="res://Cenas/Utilitarios/Hint/Hint.tscn" type="PackedScene" id=7]
[ext_resource path="res://Public/Tilesets/Calabouco.tres" type="TileSet" id=8]
[ext_resource path="res://Public/Sounds-effects/CavernSound.wav" type="AudioStream" id=9]
[ext_resource path="res://Public/Tilesets/mainlevbuild.png" type="Texture" id=10]
[ext_resource path="res://Cenas/Fases/Tutorial/Mapa1/Calabouco.tres" type="TileSet" id=11]

[sub_resource type="ConvexPolygonShape2D" id=54]
points = PoolVector2Array( 16, 48, 0, 48, 0, 32, 16, 32 )

[sub_resource type="ConvexPolygonShape2D" id=55]
points = PoolVector2Array( 32, 48, 16, 48, 16, 32, 32, 32 )

[sub_resource type="TileSet" id=47]
0/name = "mainlevbuild.png 0"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 192, 208, 32, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 54 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 54 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "mainlevbuild.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 240, 208, 32, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 55 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 55 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 134.876, 27.211 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.5, 31.3333 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 86.5, 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource( 47 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 720924, 0, 0, 720927, 1, 0 )

[node name="BackgroundTutorial1" type="Sprite" parent="."]
position = Vector2( 320, 240 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="BackgroundTutorial1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackgroundTutorial1/Area2D"]
position = Vector2( 328.348, -473.834 )
shape = SubResource( 2 )

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65513, 1, 0, -65509, 1, 0, -65506, 1, 0, 196631, 1, 0, 196635, 1, 0, 196638, 1, 0, 393215, 1, 0, 327683, 1, 0, 327687, 1, 0, 327691, 1, 0, 458775, 1, 0, 458779, 1, 0, 458782, 1, 0, 524299, 1, 0, 589826, 1, 0, 655383, 1, 0, 655386, 1, 0, 655390, 1, 0, 786443, 0, 0, 851970, 1, 0, 917527, 1, 0, 917531, 1, 0, 917535, 2, 0, 983046, 2, 0, 983048, 2, 0, 983049, 2, 0, 1048578, 2, 0, 1048580, 2, 0, 1048582, 2, 0, 1048584, 2, 0, 1048585, 2, 0, 1048607, 2, 0, 1179657, 2, 0, 1179667, 1, 0, 1179676, 1, 0, 1179680, 2, 0, 1310729, 1, 0, 1310733, 2, 0, 1310735, 2, 0, 1310737, 2, 0, 1310752, 2, 0, 1441812, 1, 0, 1441816, 1, 0, 1441820, 1, 0, 1441824, 2, 0, 1507360, 2, 0, 1572873, 1, 0, 1703945, 1, 0, 1703949, 1, 0, 1703953, 1, 0, 1703957, 2, 0, 1835029, 2, 0 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65537, 8, 0, -131071, 8, 0, -131068, 8, 0, -131065, 8, 0, -131062, 8, 0, -131059, 8, 0, -131056, 48, 0, -131055, 48, 0, -131054, 48, 0, -131053, 48, 0, -131052, 43, 0, -131050, 10, 0, -131038, 9, 0, -131037, 8, 0, -131034, 43, 0, -65521, 42, 0, -65520, 8, 0, -65518, 48, 0, -65517, 48, 0, 18, 48, 0, 19, 48, 0, 23, 6, 0, 24, 3, 0, 33, 7, 0, 131071, 49, 0, 65541, 49, 0, 65547, 34, 0, 65549, 34, 0, 65550, 34, 0, 65551, 48, 0, 65554, 48, 0, 65555, 48, 0, 65571, 8, 0, 65574, 43, 0, 196607, 16, 0, 131074, 16, 0, 131077, 16, 0, 131081, 15, 0, 131084, 17, 0, 131087, 9, 0, 131088, 8, 0, 131091, 48, 0, 131092, 43, 0, 131095, 6, 0, 131105, 7, 0, 131106, 9, 0, 196627, 48, 0, 196630, 10, 0, 262159, 9, 0, 262163, 48, 0, 262167, 6, 0, 262177, 7, 0, 262179, 8, 0, 393215, 31, 0, 327681, 31, 0, 327683, 31, 0, 327685, 31, 0, 327689, 50, 0, 327694, 13, 0, 327696, 8, 0, 327699, 48, 0, 327718, 43, 0, 393230, 7, 0, 393235, 42, 0, 393236, 43, 0, 393239, 6, 0, 393240, 3, 0, 393249, 7, 0, 458771, 48, 0, 458774, 10, 0, 458786, 9, 0, 458787, 8, 0, 524294, 37, 0, 524295, 36, 0, 524296, 36, 0, 524298, 39, 0, 524302, 7, 0, 524303, 38, 0, 524304, 34, 0, 524305, 34, 0, 524311, 6, 0, 524321, 7, 0, 655359, 35, 0, 589825, 39, 0, 589830, 9, 0, 589831, 45, 0, 589833, 48, 0, 589834, 10, 0, 589839, 18, 0, 589843, 9, 0, 589862, 43, 0, 720894, 8, 0, 655361, 10, 0, 655362, 6, 0, 655365, 7, 0, 655369, 48, 0, 655371, 6, 0, 655374, 7, 0, 655380, 43, 0, 655383, 6, 0, 655393, 7, 0, 655395, 8, 0, 720898, 6, 0, 720901, 7, 0, 720902, 19, 0, 720903, 20, 0, 720905, 21, 0, 720907, 6, 0, 786446, 12, 0, 786447, 50, 0, 786450, 13, 0, 786454, 10, 0, 786455, 6, 0, 786465, 37, 0, 786466, 41, 0, 917502, 8, 0, 851969, 10, 0, 851970, 6, 0, 851973, 7, 0, 851979, 6, 0, 851986, 7, 0, 851990, 10, 0, 851991, 2, 0, 851992, 34, 0, 851993, 34, 0, 851994, 34, 0, 852001, 9, 0, 852002, 8, 0, 852005, 8, 0, 917523, 38, 0, 917524, 34, 0, 917526, 40, 0, 917528, 16, 0, 917532, 0, 0, 917536, 1, 0, 983042, 6, 0, 983045, 12, 0, 983046, 50, 0, 983048, 50, 0, 983051, 11, 0, 983058, 7, 0, 983059, 16, 0, 1114110, 8, 0, 1048578, 6, 0, 1048594, 7, 0, 1048610, 8, 0, 1048613, 8, 0, 1114144, 13, 0, 1114145, 9, 0, 1179649, 48, 0, 1179650, 35, 0, 1179652, 35, 0, 1179654, 35, 0, 1179656, 39, 0, 1179666, 12, 0, 1179671, 51, 0, 1179673, 51, 0, 1179680, 7, 0, 1310718, 8, 0, 1245185, 8, 0, 1245188, 8, 0, 1245191, 48, 0, 1245192, 10, 0, 1245193, 6, 0, 1245207, 51, 0, 1245209, 51, 0, 1245216, 7, 0, 1245218, 8, 0, 1245221, 8, 0, 1310727, 48, 0, 1376263, 48, 0, 1376265, 6, 0, 1376268, 24, 0, 1376271, 30, 0, 1376274, 27, 0, 1376288, 7, 0, 1376289, 9, 0, 1507326, 8, 0, 1441793, 8, 0, 1441796, 8, 0, 1441799, 48, 0, 1441826, 8, 0, 1441829, 8, 0, 1507335, 48, 0, 1507337, 6, 0, 1507360, 7, 0, 1572871, 48, 0, 1572872, 10, 0, 1572876, 25, 0, 1572879, 32, 0, 1572882, 28, 0, 1703934, 8, 0, 1638401, 8, 0, 1638404, 8, 0, 1638407, 48, 0, 1638409, 6, 0, 1638428, 37, 0, 1638429, 36, 0, 1638430, 35, 0, 1638432, 35, 0, 1638433, 41, 0, 1638434, 8, 0, 1638437, 8, 0, 1703943, 48, 0, 1703951, 31, 0, 1703959, 51, 0, 1703961, 51, 0, 1703964, 9, 0, 1703965, 44, 0, 1703969, 48, 0, 1769479, 48, 0, 1769481, 6, 0, 1769495, 51, 0, 1769497, 51, 0, 1769505, 48, 0, 1900542, 8, 0, 1835009, 8, 0, 1835012, 8, 0, 1835015, 48, 0, 1835017, 6, 0, 1835037, 8, 0, 1835040, 45, 0, 1835042, 8, 0, 1835045, 8, 0, 1900551, 48, 0, 1900552, 10, 0, 1966087, 48, 0, 1966089, 35, 0, 1966091, 35, 0, 1966093, 35, 0, 1966095, 35, 0, 1966097, 35, 0, 1966099, 35, 0, 1966101, 35, 0, 1966103, 35, 0, 1966104, 35, 0, 1966106, 35, 0, 1966107, 35, 0, 1966112, 45, 0, 2097150, 8, 0, 2031617, 8, 0, 2031620, 8, 0, 2031623, 8, 0, 2031626, 8, 0, 2031629, 8, 0, 2031632, 8, 0, 2031635, 8, 0, 2031638, 8, 0, 2031641, 8, 0, 2031644, 8, 0, 2031647, 48, 0, 2031650, 8, 0, 2031653, 8, 0, 2097183, 48, 0, 2097184, 45, 0, 2162719, 48, 0 )

[node name="TurorialArea1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurorialArea1"]
position = Vector2( 61, 121 )
shape = SubResource( 3 )

[node name="Dellson" parent="." instance=ExtResource( 4 )]
position = Vector2( 478, 45 )

[node name="Area2DDellson" type="Area2D" parent="Dellson"]
position = Vector2( -1279, -208 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dellson/Area2DDellson"]
position = Vector2( 1279, 228 )
shape = SubResource( 3 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 69, 86 )
moveSpeed = 5

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 34.1214, 4.97744 )
scale = Vector2( 0.123934, 0.216787 )
current = true
zoom = Vector2( 0.3, 0.3 )
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 480
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.4
drag_margin_right = 0.28
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Camera2D"]

[node name="PopupDialog" parent="Player/Camera2D/CanvasLayer" instance=ExtResource( 5 )]

[node name="Hint" parent="Player/Camera2D/CanvasLayer" instance=ExtResource( 7 )]
margin_left = 16.0
margin_top = 7.0
margin_right = 16.0
margin_bottom = 23.0

[node name="PopupPause" parent="Player/Camera2D/CanvasLayer" instance=ExtResource( 2 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -20.0
autoplay = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 0, -7.48959 )
scale = Vector2( 1, 1.05208 )
polygon = PoolVector2Array( -16, 85, 4, 85, 4, 145, -15, 145 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 368, 2, 547, 2, 546, -19, 367, -18 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 457.5, 6 )
shape = SubResource( 50 )

[connection signal="area_shape_entered" from="BackgroundTutorial1/Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="TurorialArea1" to="." method="_on_TurorialArea1_area_shape_exited"]
[connection signal="area_shape_entered" from="Dellson/Area2DDellson" to="." method="_on_Area2DDellson_area_shape_entered"]
[connection signal="area_shape_exited" from="Dellson/Area2DDellson" to="." method="_on_Area2DDellson_area_shape_exited"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
